Added documentation links and a 404 page with personalized banner

--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
                        <li>Web Design</li>
                        <li>Technical Documentation</li>
                        <li>Copywriting for Web</li>
-                       <li>Copywriting for Social Media</li>
+                       <li style="display:none">Software Engineering</li>
                    </ul>
                </div>
                <div id="col2">
                    <ul>
                        <li>Wordpress Development</li>
                        <li>UX Design</li>
-                       <li>Software Engineering</li>
-                       <li>Artificial Intelligence (AI)</li>
+                       <li>Copywriting for Social Media</li>
+                       <li style="display:none;">Artificial Intelligence (AI)</li>
                    </ul>
                </div>
            </div>
@@ -101,7 +101,7 @@
        </section>
        <section id="projects" role="region" aria-label="Sample Work">
            <h2>Sample Work</h2>
-           <div id="row1">
+           <div id="row1" style="display:none;">
                <table class="one-third">
                    <tbody>
                        <tr><th>UX Design</th></tr>
@@ -155,11 +155,11 @@
                <table class="col2">
                    <tbody>
                        <tr><th>Technical Documentation</th></tr>
-                       <tr><td><a href="https://www.providence-golf.com/" target="_blank" aria-label="Getting started with WooCommerce (opens in a new tab)">Getting Started with WooCommerce</a></td></tr>
-                       <tr><td><a href="https://sunshineclosetdesigns.com/" target="_blank" aria-label="Accessing Your Website (opens in a new tab)">Accessing Your Website</a></td></tr>
-                       <tr><td><a href="https://www.aurora.malloryjoy.dev/" target="_blank" aria-label="Website Build Basics (opens in a new tab)">Website Build Basics</a></td></tr>
-                       <tr><td><a href="https://www.aurora.malloryjoy.dev/" target="_blank" aria-label="Sunstone Build Process (opens in a new tab)">Sunstone Build Process</a></td></tr>
-                       <tr><td><a href="https://golf.nbcsportsnext.com/template-library/" target="_blank" aria-label="Fairway Build Process (opens in a new tab)">Fairway Build Process</a></td></tr>
+                       <tr><td><a href="/OnlineStoreSetup.pdf" target="_blank" aria-label="Getting started with WooCommerce (opens in a new tab)">Online Store Setup</a></td></tr>
+                       <tr><td><a href="/BasicBuildProcess.pdf" target="_blank" aria-label="Website Build Basics (opens in a new tab)">Website Build Basics</a></td></tr>
+                       <tr><td><a href="/SunstoneWalkthrough.pdf" target="_blank" aria-label="Sunstone Build Process (opens in a new tab)">Sunstone Build Process</a></td></tr>
+                       <tr><td><a href="/AspenWalkthrough.pdf" target="_blank" aria-label="Fairway Build Process (opens in a new tab)">Aspen Build Process</a></td></tr>
+                       <tr><td><a href="/accessingyourwebsite.pdf" target="_blank" aria-label="Accessing Your Website (opens in a new tab)">Accessing Your Website</a></td></tr>
                        </tbody>
                </table>
                <!--div id="hmotbs">
@@ -172,7 +172,7 @@
                    </table>
            </div-->
        </div>
-           <div id="row3">
+           <div id="row3" style="display:none;">
                <table class="1col">
                <tbody>
                    <tr><th>Artificial Intelligence</th></tr>
