displayed social links in mobile and reshaped "about me" section

--- a/index.html
+++ b/index.html
@@ -89,19 +89,18 @@
        <section id="aboutme" role="main">
           
            <div id="myface">
-           <img class="circle" id="defaultimage" src="https://media.licdn.com/dms/image/C4E03AQGw2dnWEa_XDQ/profile-displayphoto-shrink_200_200/0/1517432764982?e=1726099200&v=beta&t=RyzoxoxlW3aVSVaAwa8p3xNSPwxKYRCjfwSKe89141M" width="300" height="300" alt="Mallory Joy face" />
+           <img class="circle" id="defaultimage" src="https://media.licdn.com/dms/image/C4E03AQGw2dnWEa_XDQ/profile-displayphoto-shrink_200_200/0/1517432764982?e=1726099200&v=beta&t=RyzoxoxlW3aVSVaAwa8p3xNSPwxKYRCjfwSKe89141M" alt="Mallory Joy face" />
            </div>
            <div role="region" id="mystory" aria-label="about me">
            <h2 class="sectionheader" aria-label="Hi! I'm Mallory.">Hi! I'm Mallory.</h2>
            <p>I am a full stack developer based out of the east coast of the United States. The beginning of my career can be traced
                back to my early teens, as every 'cool kid' started creating profiles on Myspace. I would rapid fire choose theme after theme
-               for my <em>own</em> profile, while sitting in awe at the people who knew how to manipulate the HTML and CSS of a theme to make
+               for my own profile, while sitting in awe at the people who knew how to manipulate the HTML and CSS of a theme to make
                it their own. As the social media industry boomed, so did my interest in web design and software engineering.
-           </p>
-           <p>Outside of the world wide web, I like movies (horror!), music (indie!), and traveling (everywhere!). As you read this, I am probably scribbling away in a journal,
-               reading a book, or playing piano. Ask me about my favorite sitcom, and tell me yours!
-           </p>
-           <p>In short, I love a good story, and a great adventure. Ready to leave the Shire?</p>
+           <br /><br />
+           Outside of the world wide web, I like movies (horror!), music (indie!), and traveling (everywhere!). As you read this, I am probably scribbling away in a journal,
+               reading a book, or playing piano. Ask me about my favorite sitcom, and tell me yours!<br /><br />
+           In short, I love a good story, and a great adventure. Ready to leave the Shire?</p>
            </div><div style="clear: both;"></div>
           
        </section>
