Updated HTML to include correct links to each page

--- a/ux-portfolio.html
+++ b/ux-portfolio.html
@@ -80,7 +80,7 @@
                 <div class="portfolioimage"><img id="uximage" src="https://images.pexels.com/photos/1018133/pexels-photo-1018133.jpeg" alt="stack of two journals, bottom journal a marble slate color, and a pink journal on top that reads 'JOURNAl', with two colored pencils, one red and one violet, sitting atop the pink journal"></div>
                 <div class="portfoliotext"><h3 id="casestudytitle">ADHD JOURNAL: MAKING YOUR MIND YOUR SUPERPOWER</h3>
                 <p>The recreation of <em><a href="https://myepicself.co/collections/adhd-planners" target="_blank" aria-label="epic self">epic self</em></a>'s ADHD Planner as a website and corresponding mobile application, allowing for a journal that is more convenient, cost effective, and environmentally friendly. </p><br />
-                <a aria-label="View Case Study" class="button" href="https:www.malloryjoy.dev/notsofast.html">View Case Study</a></p></div>
+                <a aria-label="View Case Study" class="button" href="https://www.malloryjoy.dev/adhd-journal.html">View Case Study</a></p></div>
             </div>
 
 
