--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                    <li class="navItem"><a href="#expertise">Projects</a> </li>
                    <li class="navItem"><a href="#resume">Resume</a> </li>
                    <li class="navItem"><a href="#contact">Contact</a> </li>
-                   <li class="navItem"><a href="/notsofast.html">UX Portfolio</a> </li>
+                   <li class="navItem"><a href="/ux-portfolio.html">UX Portfolio</a> </li>
 
 
                </ul>
