Update links to go to correct place

--- a/adhd-journal.html
+++ b/adhd-journal.html
@@ -23,7 +23,7 @@
    </head>
   
    <body>
-    <section id="ux-mobileNav">
+    <section id="mobileNav">
     <div class="off-screen-menu">
         <ul id="mobileLinks">
             <li class="navItem"><a href="#welcome">Home</a> </li>
@@ -44,7 +44,7 @@
       </div>
   
       <nav id="hammenu">
-        <div class="ux-ham-menu">
+        <div class="ham-menu">
           <span></span>
           <span></span>
           <span></span>
