--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li class="navItem"><a href="#expertise">Projects</a> </li>
             <li class="navItem"><a href="#resume">Resume</a> </li>
             <li class="navItem"><a href="#contact">Contact</a> </li>
-            <li class="navItem"><a href="#contact">UX Portfolio</a> </li>
+            <li class="navItem"><a href="/ux-portfolio.html">UX Portfolio</a> </li>
         </ul>
         <section id="thisgroup">
         <h3 style="font-size: .5em">MY SOCIALS</h3>
