Update UX Portfolio link

--- a/adhd-journal.html
+++ b/adhd-journal.html
@@ -61,7 +61,7 @@
                    <li class="navItem"><a href="https:www.malloryjoy.dev/#expertise">Projects</a> </li>
                    <li class="navItem"><a href="https:www.malloryjoy.dev/#resume">Resume</a> </li>
                    <li class="navItem"><a href="https:www.malloryjoy.dev/#contact">Contact</a> </li>
-                   <li class="navItem"><a href="/notsofast.html">UX Portfolio</a> </li>
+                   <li class="navItem"><a href="/ux-portfolio.html">UX Portfolio</a> </li>
 
 
                </ul>
