--- a/ux-portfolio.html
+++ b/ux-portfolio.html
@@ -16,7 +16,7 @@
       
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
        <!-- Core theme CSS (includes Bootstrap)-->
-       <link href="./css/styles.css" rel="stylesheet" id="stylin" type="text/css">
+       <link href="./css/uxstyles.css" rel="stylesheet" id="stylin" type="text/css">
       
 
 
