--- a/adhd-journal.html
+++ b/adhd-journal.html
@@ -83,7 +83,7 @@
             <p>The recreation of <em><a href="https://myepicself.co/collections/adhd-planners" target="_blank" aria-label="epic self">epic self</em></a>'s ADHD Planner as a website and corresponding mobile application, allowing for a journal that is more convenient, cost effective, and environmentally friendly. </p><br />
             
             <div id="photosection">
-                <img src="https://wwww.malloryjoy.dev/plannerimages.png" alt="Desktop, mobile, and tablet view of project landing page">
+                <img src="https://malloryjoy.dev/plannerimages.png" alt="Desktop, mobile, and tablet view of project landing page" style="max-width:100%; height:auto;">
 
             </div>
 
@@ -106,25 +106,36 @@
             <p>The physical journal is laid out for users to track up to ten habits, followed by a daily planner for up to ninety days, with a “Weekly Review” section bookending each week to rehash successes, failures, benchmarks, and ways to improve in the coming week. My initial task was to take the layout of the journal, and convert each section of “Habit Tracker,” “Weekly Review,” and “Daily Planner” into a desktop, mobile, and tablet friendly template. 
                 <br /><br />
                 <em>Initial Sketches </em>
-
+                    <div id="photosection">
+                        <img src="https://malloryjoy.dev/initialmockups.png" alt="Mockup Images of Weekly Review, Daily Review, and Habit Tracker" style="max-width:100%; height:auto;">
+                    </div>
                 <br /><br />
                 I decided to go with a more loose flow than the direct front-to-back, left-to-right nature of the journal. This flexibility would allow a user with a specific thought in their head, be it related to a habit being tracked or needing to consider a deadline, would be able to access the landing page and navigate directly to the space allotted for such a thought. Thus, a “landing page” was created as the first step in the flow, for a user to see the primary notes for their progress: the “Big three” tasks for the week, their current habits, and a way to either add a new day/weekly review/ habit to their account, or update their current pages. 
                 The initial design for this page ended up vastly different to the finished design, based on visual symmetry and allotment screen space. 
                 <br /><br />
                <em>Landing Page Mockup vs. Actual Layout</em>
+               <div id="photosection">
+                <img src="https://malloryjoy.dev/landingpages.png" alt="Mockup Images of Weekly Review, Daily Review, and Habit Tracker" style="max-width:100%; height:auto;">
+                 </div>
                 <br /><br />
                 Journals as a whole act as an archive, allowing a user to reference previous entries with ease. I recreated this aspect for the digital product in creating an Archive page, in which a user can view previously tracked habits and weeks of entries, broken down by day.
                 <br /><br />
                 <em>Archive Page </em>
+                <div id="photosection">
+                    <img src="https://malloryjoy.dev/archivepages.png" alt="Mockup Images of Weekly Review, Daily Review, and Habit Tracker" style="max-width:100%; height:auto;">
+                     </div>
                 <br /><br />
                 An additional aspect of the planner I chose to mirror in this project came in the form of color-coding. The journal is currently available in four colors, and I wanted users to be able to inject a similar level of personality into their journal. As a result, this application allows users to choose between five colors, with a blue-grey color as the default shade (specifically labeled “Dawn,” to symbolize a new day and a fresh start in every entry).
                 <br /><br />
-                <em>Final Design</em>
+                <em>Color Options, seen in Account Pages in Mobile View</em>
+                <div id="photosection">
+                    <img src="https://malloryjoy.dev/archivepages.png" alt="Mockup Images of Weekly Review, Daily Review, and Habit Tracker" style="max-width:100%; height:auto;">
+                     </div>
                 <br /><br />
                 Throughout the build process, I consulted with a colleague for testing. This colleague helped to clarify several important accessibility points, such as ensuring readability across mobile sizes. Because ADHD (and digital opportunity as a whole) is not a one-size-fits-all system, creating a product that is easy to navigate and use across the board was of utmost importance. </p>
                 <div id="portfoliobreak"></div>
 
-            <h3>Design Process</h3>
+            <h3>Final Design</h3>
             <p>The final design for this product captures the efficiency of its source, and adds a new layer of convenience in its accessibility at all times. The overall minimalist nature of the design enables the user to feel less overwhelmed in maintaining the journal, as the major “fill in” spaces of the journal can all be completed in under ten minutes. As well, the ability to personalize the product with flexible color selection creates a personal touch, adding an additional sense of comfort for the user. 
             <br />
             This product achieves a happy medium of dynamic design with simplicity, offering little frills and fantastic focus. By creating a product designed by an ADHD persona, for ADHD personas, I was able to hone in on what made the original product work, while also tweaking it for a modern, digital audience. </p>
