Updated final font stylings

--- a/adhd-journal.html
+++ b/adhd-journal.html
@@ -108,31 +108,31 @@
                 <em>Initial Sketches </em>
                     <div id="photosection">
                         <img src="https://malloryjoy.dev/initialmockups.png" alt="Mockup Images of Weekly Review, Daily Review, and Habit Tracker" style="max-width:100%; height:auto;">
-                    </div>
+                    </div></p>
                 <br /><br />
-                I decided to go with a more loose flow than the direct front-to-back, left-to-right nature of the journal. This flexibility would allow a user with a specific thought in their head, be it related to a habit being tracked or needing to consider a deadline, would be able to access the landing page and navigate directly to the space allotted for such a thought. Thus, a “landing page” was created as the first step in the flow, for a user to see the primary notes for their progress: the “Big three” tasks for the week, their current habits, and a way to either add a new day/weekly review/ habit to their account, or update their current pages. 
+                <p>I decided to go with a more loose flow than the direct front-to-back, left-to-right nature of the journal. This flexibility would allow a user with a specific thought in their head, be it related to a habit being tracked or needing to consider a deadline, would be able to access the landing page and navigate directly to the space allotted for such a thought. Thus, a “landing page” was created as the first step in the flow, for a user to see the primary notes for their progress: the “Big three” tasks for the week, their current habits, and a way to either add a new day/weekly review/ habit to their account, or update their current pages. 
                 The initial design for this page ended up vastly different to the finished design, based on visual symmetry and allotment screen space. 
                 <br /><br />
                <em>Landing Page Mockup vs. Actual Layout</em>
                <div id="photosection">
                 <img src="https://malloryjoy.dev/landingpages.png" alt="Landing page of planner, in live format compared to initial sketches" style="max-width:100%; height:auto;">
-                 </div>
+                 </div></p>
                 <br /><br />
-                Journals as a whole act as an archive, allowing a user to reference previous entries with ease. I recreated this aspect for the digital product in creating an Archive page, in which a user can view previously tracked habits and weeks of entries, broken down by day.
+                <p>Journals as a whole act as an archive, allowing a user to reference previous entries with ease. I recreated this aspect for the digital product in creating an Archive page, in which a user can view previously tracked habits and weeks of entries, broken down by day.
                 <br /><br />
                 <em>Archive Page </em>
                 <div id="photosection">
                     <img src="https://malloryjoy.dev/archivepages.png" alt="Archive page layout" style="max-width:100%; height:auto;">
                      </div>
-                <br /><br />
-                An additional aspect of the planner I chose to mirror in this project came in the form of color-coding. The journal is currently available in four colors, and I wanted users to be able to inject a similar level of personality into their journal. As a result, this application allows users to choose between five colors, with a blue-grey color as the default shade (specifically labeled “Dawn,” to symbolize a new day and a fresh start in every entry).
+                <br /><br /></p>
+               <p>An additional aspect of the planner I chose to mirror in this project came in the form of color-coding. The journal is currently available in four colors, and I wanted users to be able to inject a similar level of personality into their journal. As a result, this application allows users to choose between five colors, with a blue-grey color as the default shade (specifically labeled “Dawn,” to symbolize a new day and a fresh start in every entry).
                 <br /><br />
                 <em>Color Options, seen in Account Pages in Mobile View</em>
                 <div id="photosection">
                     <img src="https://malloryjoy.dev/archivepages.png" alt="Mobile layout of Account page in the color shades available with the journal profile" style="max-width:100%; height:auto;">
-                     </div>
+                     </div></p>
                 <br /><br />
-                Throughout the build process, I consulted with a colleague for testing. This colleague helped to clarify several important accessibility points, such as ensuring readability across mobile sizes. Because ADHD (and digital opportunity as a whole) is not a one-size-fits-all system, creating a product that is easy to navigate and use across the board was of utmost importance. </p>
+                <p>Throughout the build process, I consulted with a colleague for testing. This colleague helped to clarify several important accessibility points, such as ensuring readability across mobile sizes. Because ADHD (and digital opportunity as a whole) is not a one-size-fits-all system, creating a product that is easy to navigate and use across the board was of utmost importance. </p>
                 <div id="portfoliobreak"></div>
 
             <h3>Final Design</h3>
