Updated to include correct image for color schemes

--- a/adhd-journal.html
+++ b/adhd-journal.html
@@ -129,7 +129,7 @@
                 <br /><br />
                 <em>Color Options, seen in Account Pages in Mobile View</em>
                 <div id="photosection">
-                    <img src="https://malloryjoy.dev/archivepages.png" alt="Mobile layout of Account page in the color shades available with the journal profile" style="max-width:100%; height:auto;">
+                    <img src="https://malloryjoy.dev/colorchoices.png" alt="Mobile layout of Account page in the color shades available with the journal profile" style="max-width:100%; height:auto;">
                      </div></p>
                 <br /><br />
                 <p>Throughout the build process, I consulted with a colleague for testing. This colleague helped to clarify several important accessibility points, such as ensuring readability across mobile sizes. Because ADHD (and digital opportunity as a whole) is not a one-size-fits-all system, creating a product that is easy to navigate and use across the board was of utmost importance. </p>
